cf_analysis_results/checkerframework_3.42.0_results_WPI/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8.txt
warning: (annotation.not.completed) $$ 2 $$ com.google.common.collect $$ @ParametersAreNonnullByDefault $$  $$ Element com.google.common.collect contains annotation @ParametersAreNonnullByDefault which can't be found. Make sure your classpath is set correctly.
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/OffHeapWithMemoryMappedFileDemo.java:16: error: (required.method.not.called) $$ 4 $$ method finish $$ runner $$ com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.OffHeapBenchmarkWorker $$ regular method exit $$ ( 599, 699 ) $$ @MustCall method finish may not have been invoked on runner or any of its aliases.
		OffHeapBenchmarkWorker runner = 
		                       ^
  The type of object is: com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.OffHeapBenchmarkWorker.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/OffHeapBenchmarkWorkerFactory.java:20: error: (return) $$ 2 $$ @MustCall("finish") MemoryMappedFileBasedOffHeapBenchmarkWorker $$ @MustCall OffHeapBenchmarkWorker $$ ( 1184, 1245 ) $$ incompatible types in return.
			return new MemoryMappedFileBasedOffHeapBenchmarkWorker(elementCount);
			       ^
  type of expression: @MustCall("finish") MemoryMappedFileBasedOffHeapBenchmarkWorker
  method return type: @MustCall OffHeapBenchmarkWorker
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/OffHeapBenchmarkWorkerFactory.java:29: error: (return) $$ 2 $$ @MustCall("finish") SerializationDeserializationBasedOffHeapBenchmarkWorker $$ @MustCall OffHeapBenchmarkWorker $$ ( 1677, 1750 ) $$ incompatible types in return.
			return new SerializationDeserializationBasedOffHeapBenchmarkWorker(elementCount);
			       ^
  type of expression: @MustCall("finish") SerializationDeserializationBasedOffHeapBenchmarkWorker
  method return type: @MustCall OffHeapBenchmarkWorker
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/serde/SerializationDeserializationBasedOffHeapBenchmarkWorker.java:44: error: (required.method.not.called) $$ 4 $$ method close $$ new UnsafeBasedOutputStream(UNSAFE, allocatedAddress, allocationSize) $$ com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.serde.SerializationDeserializationBasedOffHeapBenchmarkWorker.UnsafeBasedOutputStream $$ possible exceptional exit due to throw new IllegalStateException(e); with exception type java.lang.IllegalStateException $$ ( 1945, 2035 ) $$ @MustCall method close may not have been invoked on new UnsafeBasedOutputStream(UNSAFE, allocatedAddress, allocationSize) or any of its aliases.
				new UnsafeBasedOutputStream(
				^
  The type of object is: com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.serde.SerializationDeserializationBasedOffHeapBenchmarkWorker.UnsafeBasedOutputStream.
  Reason for going out of scope: possible exceptional exit due to throw new IllegalStateException(e); with exception type java.lang.IllegalStateException
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/serde/SerializationDeserializationBasedOffHeapBenchmarkWorker.java:48: error: (required.method.not.called) $$ 4 $$ method close $$ field oos $$ java.io.ObjectOutputStream $$  Non-final owning field might be overwritten $$ ( 2040, 2093 ) $$ @MustCall method close may not have been invoked on field oos or any of its aliases.
			oos = new ObjectOutputStream(unsafeBasedOutputStream);
			    ^
  The type of object is: java.io.ObjectOutputStream.
  Reason for going out of scope:  Non-final owning field might be overwritten
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/serde/SerializationDeserializationBasedOffHeapBenchmarkWorker.java:50: error: (required.method.not.called) $$ 4 $$ method close $$ new UnsafeBasedInputStream(UNSAFE, allocatedAddress, allocationSize) $$ com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.serde.SerializationDeserializationBasedOffHeapBenchmarkWorker.UnsafeBasedInputStream $$ possible exceptional exit due to new ObjectInputStream(unsafeBasedInputStream) with exception type java.io.IOException $$ ( 2128, 2217 ) $$ @MustCall method close may not have been invoked on new UnsafeBasedInputStream(UNSAFE, allocatedAddress, allocationSize) or any of its aliases.
				new UnsafeBasedInputStream(
				^
  The type of object is: com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.serde.SerializationDeserializationBasedOffHeapBenchmarkWorker.UnsafeBasedInputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectInputStream(unsafeBasedInputStream) with exception type java.io.IOException
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/serde/SerializationDeserializationBasedOffHeapBenchmarkWorker.java:125: error: (contracts.postcondition) $$ 3 $$ finish $$ no information about this.oos $$ this.oos is @CalledMethods("close") $$ ( 3930, 4120 ) $$ postcondition of finish is not satisfied.
	public void finish() {
	            ^
  found   : no information about this.oos
  required: this.oos is @CalledMethods("close")
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/memorymappedfile/MemoryMappedFileBasedOffHeapBenchmarkWorker.java:23: error: (missing.creates.mustcall.for) $$ 3 $$ createByteBuffer $$ this $$ fc $$ ( 698, 1179 ) $$ Method createByteBuffer re-assigns the non-final, owning field this.fc, but does not have a corresponding @CreatesMustCallFor annotation.
	protected ByteBuffer createByteBuffer(int size) {
	                     ^
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/memorymappedfile/MemoryMappedFileBasedOffHeapBenchmarkWorker.java:25: error: (required.method.not.called) $$ 4 $$ method close $$ field fc $$ java.nio.channels.FileChannel $$  Non-final owning field might be overwritten $$ ( 770, 864 ) $$ @MustCall method close may not have been invoked on field fc or any of its aliases.
			fc = 
			   ^
  The type of object is: java.nio.channels.FileChannel.
  Reason for going out of scope:  Non-final owning field might be overwritten
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/memorymappedfile/MemoryMappedFileBasedOffHeapBenchmarkWorker.java:50: error: (contracts.postcondition) $$ 3 $$ finish $$ no information about this.fc $$ this.fc is @CalledMethods("close") $$ ( 1256, 1400 ) $$ postcondition of finish is not satisfied.
	public void finish() {
	            ^
  found   : no information about this.fc
  required: this.fc is @CalledMethods("close")
../dataset/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/OffHeapWithSerializationDeserializationDemo.java:16: error: (required.method.not.called) $$ 4 $$ method finish $$ runner $$ com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.OffHeapBenchmarkWorker $$ regular method exit $$ ( 612, 724 ) $$ @MustCall method finish may not have been invoked on runner or any of its aliases.
		OffHeapBenchmarkWorker runner = 
		                       ^
  The type of object is: com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.OffHeapBenchmarkWorker.
  Reason for going out of scope: regular method exit
11 errors
1 warning
